# hisel

./: .gitignore  README.md  build.py  hisel.yml  hiselc.yml  hiselcc.yml  hiselstudy.yml  hiseltest.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS  tw-rules.yaml
.github/workflows/: build_and_publish.yml  run_tests.yaml  trufflehog.yml
examples/: feature_selection.py  hsiclasso.py  hsiclasso_sklearn_example.py  minimal_with_params.py  recommended_feature_selection_workflow.py
hisel/: __init__.py  categorical.py  cudakernels.py  feature_selection.py  hsic.py  kernels.py  permutohedron.py  select.py  torchkernels.py
hisel/lar/: __init__.py  _lar.pxd  lar.py  lar.pyx
notebooks/: classification.ipynb  cont_cat_split_demo.ipynb  ensemble-example.ipynb  feature_selection_demo.ipynb  featvector_training_example.ipynb  hsic_lasso_selection_for_classification.ipynb  nonlinear-transform.ipynb  projections.ipynb  regcurves.ipynb  selection_workflow.ipynb
notebooks/study/: ensemble.ipynb  nonlinear.ipynb
notebooks/study/sphercodes/: nonconclusive_single_marginal.ipynb  permutohedron.py  search.py
notebooks/study/sphercodes/researchnote/tex/: main.tex  mypaper.cls
notebooks/study/sphercodes/researchnote/tex/include/: notation.tex  sethyperref.tex
profiling/: categorical_profile.py  feature_selection_profile.py  gram_comparison.py  hsic_profile.py  kernel_profile.py  lar_comparison.py  lar_profile.py  select_comparison.py  select_profile  select_profile.py
tests/: __init__.py  categorical_test.py  cudakernels_test.py  feature_selection_test.py  hiseltest.yml  hsic_test.py  install_and_run.sh  kernel_test.py  lar_performance.py  lar_test.py  select_test.py  select_tests.py  torchkernel_test.py
(+3 files in other folders)
