[tool.poetry]
name = "hisel"
version = "0.5.0"
description = ""
authors = ["claudio <claudio.bellani@transferwise.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
numpy = ">=1.22"
pandas = ">=1.5.3"
scipy = ">=1.10"
scikit-learn = ">=1.2.0"
tqdm = "*"


[build-system]
requires = ["poetry-core",  "numpy", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
